--- a/style.css
+++ b/style.css
@@ -22,3 +22,17 @@
     font-size: 15px;
     font-weight: 520;
 }
+.container{
+    width: 100%;
+    height: 100vh;
+    background: lightblue;
+    display: flex;
+    place-content: center;
+}
+.container .box{
+    width: 100px;
+    height: 100px;
+    background: lightcoral;
+    margin-top: 20px;
+    border-radius: 5px;
+}
